<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/colorPrimary"
    tools:context=".DatosIniciales">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="top"
            android:fitsSystemWindows="false"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="28dp"
            android:weightSum="1">

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="70dp"
                android:layout_height="70dp"
                app:srcCompat="@mipmap/appiconsred" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:hint="@string/diTitle"
                android:fontFamily="@font/ibm_bold"
                android:textAppearance="@style/TextAppearance.AppCompat.Headline"
                android:textColorHint="@color/zona_VIII" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/signup_input_layout_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:textColorHint="@color/zona_IV">

                <EditText
                    android:id="@+id/profileName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="24dp"
                    android:hint="@string/diName"
                    android:importantForAutofill="no"
                    android:inputType="text"
                    android:singleLine="true"
                    android:textColor="@color/zona_VIII"
                    android:fontFamily="@font/ibm_regular"
                    />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/signup_input_layout_user"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:textColorHint="@color/zona_IV">

                <EditText
                    android:id="@+id/editTextEmail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="24dp"
                    android:hint="@string/diEmail"
                    android:importantForAutofill="no"
                    android:inputType="text"
                    android:singleLine="true"
                    android:textColor="@color/zona_VIII"
                    android:fontFamily="@font/ibm_regular"/>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/signup_input_layout_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:textColorHint="@color/zona_IV">

                <EditText
                    android:id="@+id/password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="24dp"
                    android:hint="@string/diPassword"
                    android:importantForAutofill="no"
                    android:ems="10"
                    android:inputType="textPassword"
                    android:singleLine="true"
                    android:textColor="@color/zona_VIII"
                    android:fontFamily="@font/ibm_regular"/>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/signup_input_layout_name2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:textColorHint="@color/zona_IV">

                <TextView
                    android:id="@+id/profileBirthday"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="?attr/editTextBackground"
                    android:hint="@string/diBirthday"
                    android:importantForAutofill="no"
                    android:singleLine="true"
                    android:textColor="@color/zona_VIII"
                    android:textColorHint="@color/zona_IV"
                    android:fontFamily="@font/ibm_regular"
                    android:textSize="18sp" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/signup_input_layout_name3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:textColorHint="@color/zona_IV">

                <EditText
                    android:id="@+id/profileSize"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/diEstatura"
                    android:importantForAutofill="no"
                    android:inputType="numberSigned"
                    android:singleLine="true"
                    android:textColor="@color/zona_VIII"
                    android:fontFamily="@font/ibm_regular" />

            </com.google.android.material.textfield.TextInputLayout>

            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center_vertical|center_horizontal"
                android:layout_marginTop="20dp"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/radioButtonMale"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_margin="5dp"
                    android:layout_weight="1"
                    android:background="@drawable/radio_button"
                    android:button="@null"
                    android:gravity="center_horizontal"
                    android:padding="2dp"
                    android:hint="@string/diGenreM"
                    android:textColorHint="@color/zona_X"
                    android:fontFamily="@font/ibm_regular"/>

                <RadioButton
                    android:id="@+id/radioButtonFemale"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_margin="5dp"
                    android:layout_weight="1"
                    android:background="@drawable/radio_button"
                    android:button="@null"
                    android:checked="true"
                    android:gravity="center_horizontal"
                    android:padding="2dp"
                    android:hint="@string/diGenreF"
                    android:textColorHint="@color/zona_X"
                    android:fontFamily="@font/ibm_regular" />

                <RadioButton
                    android:id="@+id/radioButtonOtherGender"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_margin="5dp"
                    android:layout_weight="1"
                    android:background="@drawable/radio_button"
                    android:button="@null"
                    android:gravity="center_horizontal"
                    android:padding="2dp"
                    android:hint="@string/diGenreO"
                    android:textColorHint="@color/zona_X"
                    android:fontFamily="@font/ibm_regular" />

            </RadioGroup>

            <Button
                android:id="@+id/create_newprofil"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:background="@drawable/iempty_button"
                android:hint="@string/diSave"
                android:textSize="16sp"
                android:fontFamily="@font/ibm_semibold"
                android:textColorHint="@color/zona_IX"/>
            <Button
                android:id="@+id/btniniciarsesion"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@drawable/iempty_button"
                android:hint="@string/diSesion"
                android:textSize="16sp"
                android:fontFamily="@font/ibm_semibold"
                android:textColorHint="@color/zona_IX"/>

            <TextView
                android:id="@+id/Advise"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:fontFamily="@font/ibm_regular"
                android:textColorHint="@color/zona_V"
                android:hint="@string/diAvise" />

            <TextView
                android:id="@+id/Skipt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="3dp"
                android:gravity="center"
                android:textColorHint="@color/zona_V"
                android:fontFamily="@font/ibm_regular"
                android:hint="@string/diSkitp" />

        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>