<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".VideosActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="top"
            android:fitsSystemWindows="false"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="0dp"
            android:weightSum="1">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:fontFamily="@font/ibm_semibold"
                android:hint="@string/videoI"
                android:textColorHint="@color/zona_III"
                android:textSize="24sp" />

            <com.pierfrancescosoffritti.androidyoutubeplayer.core.player.views.YouTubePlayerView
                android:layout_marginTop="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:videoId="UBMk30rjy0o"
                app:autoPlay="false"
                app:showYouTubeButton="false"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:fontFamily="@font/ibm_semibold"
                android:hint="@string/videoII"
                android:textColorHint="@color/zona_III"
                android:textSize="24sp" />

            <com.pierfrancescosoffritti.androidyoutubeplayer.core.player.views.YouTubePlayerView
                android:layout_marginTop="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:videoId="UoC_O3HzsH0"
                app:autoPlay="false"
                app:showYouTubeButton="false"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:fontFamily="@font/ibm_semibold"
                android:hint="@string/videoIII"
                android:textColorHint="@color/zona_III"
                android:textSize="24sp" />

            <com.pierfrancescosoffritti.androidyoutubeplayer.core.player.views.YouTubePlayerView
                android:layout_marginTop="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:videoId="iQ3g-gqKe_A"
                app:autoPlay="false"
                app:showYouTubeButton="false"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:fontFamily="@font/ibm_semibold"
                android:hint="@string/videoIV"
                android:textColorHint="@color/zona_III"
                android:textSize="24sp" />

            <com.pierfrancescosoffritti.androidyoutubeplayer.core.player.views.YouTubePlayerView
                android:layout_marginTop="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:videoId="0VvNNIt1c_Q"
                app:autoPlay="false"
                app:showYouTubeButton="false"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:fontFamily="@font/ibm_semibold"
                android:hint="@string/videoV"
                android:textColorHint="@color/zona_III"
                android:textSize="24sp" />

            <com.pierfrancescosoffritti.androidyoutubeplayer.core.player.views.YouTubePlayerView
                android:layout_marginTop="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:videoId="yGXwjAoQciQ"
                app:autoPlay="false"
                app:showYouTubeButton="false"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:fontFamily="@font/ibm_semibold"
                android:hint="@string/videoVI"
                android:textColorHint="@color/zona_III"
                android:textSize="24sp" />

            <com.pierfrancescosoffritti.androidyoutubeplayer.core.player.views.YouTubePlayerView
                android:layout_marginTop="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:videoId="CItsyCTMlcY"
                app:autoPlay="false"
                app:showYouTubeButton="false"/>
        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>