<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/iosF"
    tools:context=".HomeFragment">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/iosF">

        <RelativeLayout
            android:id="@+id/headerView"
            android:layout_width="match_parent"
            android:layout_height="160dp"
            android:orientation="vertical">

            <View
                android:layout_width="match_parent"
                android:layout_height="220dp"
                android:background="@color/colorPrimary" />

            <TextView
                android:id="@+id/titlehome"
                android:layout_width="140dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="20dp"
                android:layout_marginRight="16dp"
                android:hint="@string/titulo_home"
                android:fontFamily="@font/ibm_bold"
                android:textColorHint="@color/colorWhite"
                android:textSize="30sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/date"
                android:layout_width="140dp"
                android:layout_height="wrap_content"
                android:layout_below="@+id/titlehome"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="10dp"
                android:text="Martes, Febrero 17"
                android:fontFamily="@font/ibm_semibold"
                android:textColor="#CCCCCC"
                android:textSize="14sp" />

        </RelativeLayout>
        <!-- TODO: Update blank fragment layout -->


        <TextView
            android:id="@+id/intropage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="23dp"
            android:layout_marginTop="20dp"
            android:lineSpacingExtra="8dp"
            android:fontFamily="@font/ibm_semibold"
            android:hint="@string/introduction"
            android:textColorHint="@color/zona_III"
            android:textSize="24sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/headerView" />

        <TextView
            android:id="@+id/subintropage"
            android:layout_width="340dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginLeft="24dp"
            android:layout_marginTop="8dp"
            android:lineSpacingExtra="8dp"
            android:hint="@string/leyenda"
            android:textColorHint="#4C5067"
            android:fontFamily="@font/ibm_regular"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/intropage" />


        <LinearLayout
            android:id="@+id/fitone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginLeft="24dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/subintropage">

            <ImageView
                android:layout_width="90dp"
                android:layout_height="70dp"
                android:src="@drawable/excerciceonemenu" />

            <LinearLayout
                android:layout_width="160dp"
                android:layout_height="match_parent"
                android:layout_marginLeft="12dp"
                android:layout_marginTop="8dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/fitonetitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:hint="@string/rutine_I"
                    android:fontFamily="@font/ibm_regular"
                    android:textColorHint="@color/zona_0"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/fitonedesc"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:hint="@string/duration_I"
                    android:fontFamily="@font/ibm_regular"
                    android:textSize="16sp" />
            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/fittwo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginLeft="24dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/fitone">

            <ImageView
                android:layout_width="90dp"
                android:layout_height="70dp"
                android:src="@drawable/fitii" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="12dp"
                android:layout_marginTop="8dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/fittwotitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:hint="@string/rutine_II"
                    android:fontFamily="@font/ibm_regular"
                    android:textColorHint="@color/zona_0"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/fittwodesc"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:hint="@string/duration_II"
                    android:fontFamily="@font/ibm_regular"
                    android:textSize="16sp" />

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/fitthree"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginLeft="24dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/fittwo">

            <ImageView
                android:layout_width="90dp"
                android:layout_height="70dp"
                android:src="@drawable/eiii" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="12dp"
                android:layout_marginTop="8dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/fitthreetitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:hint="@string/rutine_III"
                    android:fontFamily="@font/ibm_regular"
                    android:textColorHint="@color/zona_0"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/fitthreedesc"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:hint="@string/duration_III"
                    android:fontFamily="@font/ibm_regular"
                    android:textSize="16sp" />

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/fitfour"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginLeft="24dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/fitthree">

            <ImageView
                android:layout_width="90dp"
                android:layout_height="70dp"
                android:src="@drawable/e_iv_" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="12dp"
                android:layout_marginTop="8dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/fitfourtitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:hint="@string/rutine_IV"
                    android:fontFamily="@font/ibm_regular"
                    android:textColorHint="@color/zona_0"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/fitfourdesc"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:hint="@string/duration_IV"
                    android:fontFamily="@font/ibm_regular"
                    android:textSize="16sp" />

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/fitfive"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginLeft="24dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/fitfour">

            <ImageView
                android:layout_width="90dp"
                android:layout_height="70dp"
                android:src="@drawable/e_v_" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="12dp"
                android:layout_marginTop="8dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/fitfivetitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:hint="@string/rutine_V"
                    android:fontFamily="@font/ibm_regular"
                    android:textColorHint="@color/zona_0"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/fitfivedesc"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:hint="@string/duration_V"
                    android:fontFamily="@font/ibm_regular"
                    android:textSize="16sp" />

            </LinearLayout>

        </LinearLayout>
        <LinearLayout
            android:id="@+id/fitlast"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_marginStart="24dp"
            android:layout_marginLeft="24dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/fitfive"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
